# nit

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
libframe/: CMakeLists.txt  fdMgr.cpp  fdMgr.h
libnet/: CMakeLists.txt  nsocket.cpp  nsocket.h
libos/: oswrapper.h
libtech/: CMakeLists.txt  Date.cpp  Date.h  Digest.cpp  Digest.h  Exception.cpp  Exception.h  Mutex.cpp  Mutex.h  StringUtils.cpp  StringUtils.h  atom.h  copyable.h  hash.cpp  hash.h  libconfig.h.in  libdefs.h  libmissing.cpp  libmissing.h  log.cpp  log.h  noncopyable.h
libtech/internal/: file.cpp  file.h  log_imp.cpp  log_imp.h
libtech/tests/: CMakeLists.txt  date.cpp  digest.cpp  string.cpp
test/: CMakeLists.txt
test/socket_tcp/: CMakeLists.txt  socket_c.cpp  socket_s.cpp
test/socket_udp/: CMakeLists.txt  socket_c.cpp  socket_s.cpp
